compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__prelude__qualified_nil.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Nil }\n"
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Nil }


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go() {
  return undefined;
}
