compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__prelude__qualified_nil_typescript.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
assertion_line: 41
expression: "import gleam\npub fn go() { gleam.Nil }\n"
---
import type * as $gleam from "../gleam.d.mts";

export function go(): undefined;
