compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__prelude__qualified_ok_typescript.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Ok(1) }\n"
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Ok(1) }


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export function go(): _.Result<number, any>;
