compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__prelude__qualified_prelude_value_does_not_conflict_with_local_value_constant.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
expression: "\nimport gleam\n\npub type Result(a, e) {\n  Ok(a)\n  Error(e)\n}\n\npub const error = gleam.Error(\"Bad\")\n"
---
----- SOURCE CODE

import gleam

pub type Result(a, e) {
  Ok(a)
  Error(e)
}

pub const error = gleam.Error("Bad")


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { CustomType as $CustomType } from "../gleam.mjs";

export class Ok extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export function Result$Ok($0) {
  return new Ok($0);
}
export function Result$isOk(value) {
  return value instanceof Ok;
}
export function Result$Ok$0(value) {
  return value[0];
}

export class Error extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export function Result$Error($0) {
  return new Error($0);
}
export function Result$isError(value) {
  return value instanceof Error;
}
export function Result$Error$0(value) {
  return value[0];
}

export const error = /* @__PURE__ */ new $gleam.Error("Bad");
